--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://ziad-ayman1012.github.io/React-App",
+  "homepage":"https://ziad-ayman1012.github.io/test1",
   "name": "app1",
   "private": true,
   "version": "0.0.0",
